fix z-index layout cutoff

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -963,7 +963,7 @@ ul li {
   top: 0;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 100;
+  z-index: 90;
   transition: all 0.3s ease-in-out;
   max-height: 100px;
 }
